--- a/3-PSD-To-HTML/style.css
+++ b/3-PSD-To-HTML/style.css
@@ -287,6 +287,7 @@ nav ul a:focus {
   margin-top: 0;
 }
 
+.about-me .skills i,
 .about-me h3:hover {
   color: var(--primary-color);
 }
@@ -454,6 +455,10 @@ footer ul li {
   width: 2rem;
   height: 2rem;
   display: inline-block;
+}
+
+footer ul li a {
+  color: var(--primary-font-color);
 }
 
 /* Media Queries */
